# pq

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  graph.html
.github/workflows/: release.yaml  rust.yml
dists/: Dockerfile
src/: cliopt.rs  error.rs  input.rs  labels.rs  lib.rs  main.rs  parser.rs  program.rs  reader.rs  runner.rs
src/common/: mod.rs  time.rs
src/decoder/: decoder.rs  mod.rs  record.rs  regex.rs
src/encoder/: encoder.rs  human.rs  promapi.rs
src/engine/: aggregate_expr.rs  binary_expr.rs  engine.rs  executor.rs  function.rs  functions.rs  identity.rs  mod.rs  unary_expr.rs  value.rs  vector.rs
src/format/: formatter.rs  humanreadable.rs  interactive.rs  json.rs  mod.rs  promapi.rs
src/formatting/: humanreadable.rs  json.rs
src/input/: entry.rs  input.rs  line.rs  mod.rs  reader.rs  record.rs
src/mapping/: mapper.rs  mod.rs
src/matcher/: list.rs  matcher.rs  mod.rs  parser.rs
src/model/: labels.rs  metric.rs  mod.rs  record.rs  sample.rs  timestamp.rs  types.rs
src/output/: mod.rs  output.rs  writer.rs
src/parse/: mod.rs
src/parser/: ast.rs  common.rs  duration.rs  error.rs  expr.rs  function.rs  mod.rs  number.rs  parser.rs  result.rs  string.rs  vector.rs
src/parsing/: json.rs  mod.rs  parser.rs  regex.rs
src/pipeline/: mod.rs  pipeline.rs
src/program/: mod.rs  parser.rs
src/query/: aggregate.rs  aggregate_expr.rs  binary.rs  binary_expr.rs  evaluator.rs  executor.rs  function.rs  identity.rs  mod.rs  sample.rs  samples.rs  unary.rs  unary_expr.rs  value.rs  vector.rs
tests/: e2e.rs
(+122 files in other folders)
