[package]
name = "pq"
description = "Parse and Query log files as time series"
version = "0.0.6"
edition = "2018"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/iximiuz/pq"
documentation = "https://github.com/iximiuz/pq"
repository = "https://github.com/iximiuz/pq"
readme = "README.md"
keywords = ["log", "parse", "query", "time-series"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
nom = "6.1.2"
nom_locate = "3.0.1"
regex = "1.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"

